# dataspeech

./: .gitignore  README.md  note.md  pyproject.toml
datasets/: format_datasets.py  jsut_ver1.1_basic5000.csv
